Agregando no. de cuenta y modificando el esqueleto

--- a/latex/Tarea1.tex
+++ b/latex/Tarea1.tex
@@ -1,46 +1,58 @@
 \documentclass{article}
-    \usepackage[spanish,activeacute]{babel}
-    \usepackage{mathtools}
-    \usepackage{graphicx}
-    \usepackage{anysize}
-    \usepackage{multicol}
-    \usepackage{amsmath}
-    \usepackage{amssymb}
-    \usepackage{stackrel}
-    \usepackage{mathrsfs}
-    \usepackage[utf8]{inputenc}
-    \title{Fundamentos de Bases de Datos}
+\usepackage[utf8]{inputenc}
+\usepackage{mathtools}
+\usepackage{graphicx}
+\usepackage{anysize}
+\usepackage{multicol}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{enumerate}
+\usepackage{stackrel}
+\usepackage{mathrsfs}
+\usepackage{parskip}
+    \title{Tarea 1: Conceptos básicos \\
+        Fundamentos de Bases de Datos}
 
-    \author{Teresa Becerril Torres\\
-            Miguel Torres\\
-            Nicole Romina Traschikoff García 3\\
-            \\}
-
-    \marginsize{1.5cm}{0cm}{1.5cm}{0cm}
+    \author{Teresa Becerril Torres 315045132\\
+        Miguel Torres 315300442\\
+        Nicole Romina Traschikoff García 3\\
+        \\}
 
     \begin{document}
         \maketitle
-        \vspace{.4cm}
-        \begin{enumerate}
-          \item ¿Por qué elegirías almacenar datos en un sistema de base de datos en lugar de simplemente almacenarlos utilizando el sistema de archivos de un sistema operativo? ¿En qué casos no tendría sentido utilizar un sistema de base de datos?
-          \item ¿Qué ventajas y desventajas encuentras al trabajar con una base de datos?
-          \item Investiga cuáles serían los distintos tipos de usuarios finales de una base de datos, indica las principales actividades que realizaría cada uno de ellos.
-          \item Explica las diferencias entre la independencia de datos física y lógica. ¿Cuál es más difícil de lograr y por qué?
-          \item ¿Qué es un diccionario de datos y por qué es importante para el SMBD?
-          \item Indica las principales características de los modelos de datos más representativos. ¿Cuáles serían las diferencias entre los modelos relacional, orientado a objetos, semiestructurado y objeto-relacional?
-          \item Elabora una línea de tiempo, en dónde indiques los principales hitos en el desarrollo de las BDs.
-          \item Indica las responsabilidades que tiene un Sistema Manejador de Bases de Datos y para cada responsabilidad, explica los problemas que surgirían sí dicha responsabilidad no se cumpliera.
-          \item Supón que un banco pequeño desea almacenarlos su información en una base de datos y le gustaría comprar el SMBD que tenga la menor cantidad de características posibles. Está interesado en ejecutar la aplicación en una sola computadora personal y no se planea compartir la información con nadie. Para cada una de las siguientes características explica por qué se debería o no incluir en el SMBD que desea comprar (suponiendo que se pueden comprar por separado:) seguridad, control de concurrencia, recuperación en caso de fallas, lenguaje de consulta, mecanismo de vistas, manejo de transacciones.
-          \end{enumerate} 
 
-          \begin{enumerate}
-
-          \item ¿Qué es la Calidad de Datos y cómo se relaciona con las bases de datos?
-          \item ¿Qué son las bases de datosNoSQL? indica el modelo de datos utilizado y algunos proveedores.
-          \item ¿Qué es un Almacén de datos? Indica las diferencias entre éstos y una base de datos.
-
+    \begin{enumerate}
+        \item \textbf{Conceptos generales:}
+          \begin{enumerate}[a. ]
+            \item ¿Por qué elegirías almacenar datos en un sistema de base de datos en lugar de simplemente almacenarlos 
+            utilizando el sistema de archivos de un sistema operativo? ¿En qué casos no tendríaa sentido utilizar un sistema    
+            de base de datos?
+            \item ¿Qué ventajas y desventajas encuentras al trabajar con una base de datos?            
+            \item Investiga cuáles serían los distintos tipos de usuarios finales de una base de datos, indica las principales 
+            actividades que realizaría cada uno de ellos.
+            \item Explica las diferencias entre la independencia de datos física y lógica. ¿Cuál es más difícil de lograr y    
+            por qué?
+            \item ¿Qué es un diccionario de datos y por qué es importante para el SMBD?
+            \item Indica las principales características de los modelos de datos más representativos. ¿Cuáles serían las 
+            diferencias entre los modelos relacional, orientado a objetos, semiestructurado y objeto-relacional?
+            \item Elabora una línea de tiempo, en dónde indiques los principales hitos en el desarrollo de las BDs.
+            \item Indica las responsabilidades que tiene un Sistema Manejador de Bases de Datos y para cada responsabilidad, 
+            explica los problemas que surgirían sí dicha responsabilidad no se cumpliera.
+            \item Supón que un banco pequeño desea almacenarlos su información en una base de datos y le gustaría comprar el 
+            SMBD que tenga la menor cantidad de características posibles. Está interesado en ejecutar la aplicación en una 
+            sola computadora personal y no se planea compartir la información con nadie. Para cada una de las siguientes 
+            características explica por qué se debería o no incluir en el SMBD que desea comprar (suponiendo que se pueden 
+            comprar por separado:) seguridad, control de concurrencia, recuperación en caso de fallas, lenguaje de consulta, 
+            mecanismo de vistas, manejo de transacciones.
           \end{enumerate}
+        \item \textbf{Investigación}
+            \begin{enumerate}[a)]
 
-    \end{document}
+            \item ¿Qué es la Calidad de Datos y cómo se relaciona con las bases de datos?
+            \item ¿Qué son las bases de datosNoSQL? indica el modelo de datos utilizado y algunos proveedores.
+            \item ¿Qué es un Almacén de datos? Indica las diferencias entre éstos y una base de datos.
+    
+            \end{enumerate}
+    \end{enumerate}
 
     \end{document}
