--- a/latex/Tarea1.tex
+++ b/latex/Tarea1.tex
@@ -93,4 +93,13 @@
 
     \end{enumerate}
 \end{enumerate}
+
+\section*{Referencias}
+\begin{itemize}
+	
+	\item Elmasri, R. and Navathe, S. B. \textbf{Fundamentals of Database Systems}. Addison-Wesley Publishing Company, Sexta edición, 2011.
+	\item Redman, T. C. \textbf{Data Driven: Profiting from Your Most important Business Asset}. Harvard Business Press, 2008.
+
+\end{itemize}
+
 \end{document}
