--- a/latex/Tarea1.tex
+++ b/latex/Tarea1.tex
@@ -21,15 +21,18 @@
 \usepackage[lmargin=2cm,rmargin=2cm,top=2cm,bottom=2cm]{geometry}
 
 
-  \title{Fundamentos de Bases de DatosTarea $01$. \\     Conceptos básicos}
+    \title{Fundamentos de Bases de Datos \\
+        Tarea 1 \\
+        Conceptos básicos}
 
-    \author{Teresa Becerril Torres \\
+
+    \author{Teresa Becerril Torres
             $\#$ de cuenta: $315045132$ \\
-            Miguel Ángel Torres Sánchez \\
+            Miguel Ángel Torres Sánchez
             $\#$ de cuenta: $315300442$ \\
-            Nicole Romina Traschikoff García \\
+            Nicole Romina Traschikoff García
             $\#$ de cuenta: $315164482$ \\
-            Tania Michelle Rubí Rojas \\
+            Tania Michelle Rubí Rojas
             $\#$ de cuenta: $315121719$}
         \date{18 de febrero del 2019}
 
@@ -43,7 +46,12 @@
 
           Porque en una base de datos bien diseñada se asegura la integridad de los datos y facilita trabajar con ellos a usuarios y desarrolladores. No tendría sentido usar una base de datos cuando los usuarios son pocos y cuando las cantidades de información no son grandes y no crecerán mucho o no existirá por largos periodos de tiempo.
 
-            \item ¿Qué \textbf{ventajas} y \textbf{desventajas} encuentras al trabajar con una \textbf{base de datos}?
+            \item ¿Qué \textbf{ventajas} y \textbf{desventajas} encuentras al trabajar con una \textbf{base de datos}?\\
+
+            Las ventajas que proporciona trabajar con una base de datos son aquellas garantías que nos da su diseño y el sistema manejador de bases de datos, es decir, brinda chequeo de redundancia, operaciones básicas, integridad de datos y la posibilidad de seguir expandiendo un sistema robusto, además de poder recuperar la información de manera práctica y eficiente.
+
+            Por otro lado las desventajas principales pueden estar relacionadas a los alcances del propio diseño de la BDs, donde el modelo no permita representar las necesidades de la organización, instalación costosa, se necesita de personal especializado, etc.
+
 
             \item Investiga cuáles serían las \textbf{responsabilidades} de una \textbf{DBA} y las de un \textbf{diseñador de bases de datos.}
 
