Subiendo el último ejercicio

--- a/latex/Tarea1.tex
+++ b/latex/Tarea1.tex
@@ -109,7 +109,27 @@
             \item ¿Qué es la \textbf{Calidad de Datos} y cómo se relaciona con las bases de datos? \\
         	Calidad de datos se refiere a las técnicas y procesos utilizados para asegurar que un dato es adecuado para su uso en operaciones y toma de decisiones. Se relaciona con las bases de datos pues debido a la gran cantidad de información que tienen se debe asegurar que todos los datos sirven su propósito ya que de no hacerlo podría tenerse información incorrecta o poner en riesgo la seguridad de la base de datos.
 
-            \item ¿Qué son las bases de datos \textbf{NoSQL}? indica el modelo de datos utilizado y algunos proveedores.
+            \item ¿Qué son las bases de datos \textbf{NoSQL}? indica el modelo de datos utilizado y algunos proveedores.\\\\
+
+         Los sistemas de bases de datos relacionales llevan décadas siendo el modelo informático más empleado del mundo para almacenar y recuperar la información.\\
+
+         Pero este sistema ha ido cambiando en los últimos años, surgió una contracorriente con el propósito de defender las bases de datos que no utilizaban el lenguaje SQL, denominado como el movimiento \textbf{\textit{ NoSQL}}. \\
+
+         Las bases de datos \textit{NoSQL} son un modelo no relacional, los defensores de las bases de datos NoSQL argumentan que pueden evitar la complejidad innecesaria, proporcionan en general, un alto rendimiento, pueden manejar una gran cantidad de datos, soportar lenguajes de consulta de tipo SQL y hardware de bajo costo, entre otros.\\
+
+          Y estos son algunos de sus proveedores.
+          \begin{itemize}
+            \item Hypertable
+            \item Cassandra
+            \item MongoDB
+            \item DynamoDB
+            \item HBase
+            \item Redis
+
+          \end{itemize}
+
+
+
 
             \item ¿Qué es un \textbf{Almacén de datos}? Indica las diferencias entre éstos y una base de datos.
 
