--- a/latex/Tarea1.tex
+++ b/latex/Tarea1.tex
@@ -15,6 +15,9 @@
 \usepackage{ragged2e}
 \usepackage{mathtools}
 
+% Soporte para referencias y citas
+\usepackage{hyperref}
+
 % Soporte para imágenes.
 \usepackage{graphicx}
 % Modificamos los márgenes del documento.
@@ -109,7 +112,7 @@
             \item ¿Qué es la \textbf{Calidad de Datos} y cómo se relaciona con las bases de datos? \\
         	Calidad de datos se refiere a las técnicas y procesos utilizados para asegurar que un dato es adecuado para su uso en operaciones y toma de decisiones. Se relaciona con las bases de datos pues debido a la gran cantidad de información que tienen se debe asegurar que todos los datos sirven su propósito ya que de no hacerlo podría tenerse información incorrecta o poner en riesgo la seguridad de la base de datos.
 
-            \item ¿Qué son las bases de datos \textbf{NoSQL}? indica el modelo de datos utilizado y algunos proveedores.\\\\
+            \item ¿Qué son las bases de datos \textbf{NoSQL}? indica el modelo de datos utilizado y algunos proveedores.\\
 
          Los sistemas de bases de datos relacionales llevan décadas siendo el modelo informático más empleado del mundo para almacenar y recuperar la información.\\
 
@@ -141,6 +144,14 @@
 
             	\item Elmasri, R. and Navathe, S. B. \textbf{Fundamentals of Database Systems}. Addison-Wesley Publishing Company, Sexta edición, 2011.
             	\item Redman, T. C. \textbf{Data Driven: Profiting from Your Most important Business Asset}. Harvard Business Press, 2008.
+
+              \item Anodrea Rodríguez M.\textbf{Introducción a Bases de Datos}. Universidad de Concepción, Chile. 2007.
+
+              \item URL: \url{http://www.ptolomeo.unam.mx:8080/xmlui/bitstream/handle/132.248.52.100/219/A6.pdf?sequence=6}
+
+              \item
+
+
 
             \end{itemize}
 
