--- a/latex/Tarea1.tex
+++ b/latex/Tarea1.tex
@@ -69,7 +69,9 @@
         		\item Usuario independiente: utiliza paquetes de software específicos fáciles de usar para mantener una base de datos personal.
         	\end{itemize}
 
-            \item Explica las diferencias entre la \textbf{independencia de datos física} y \textbf{lógica}. ¿Cuál es más difícil de lograr y por qué? \\
+            \item Explica las diferencias entre la \textbf{independencia de datos física} y \textbf{lógica}. ¿Cuál es más difícil de lograr y por qué?
+
+            \textsc{Solución:} La independencia de datos física es cuando los cambios en la organización física de la base de datos no afectan al mundo exterior (es decir, los programas o los usuarios directos), mientras que la independencia de datos lógica es cuando los usuarios no se ven afectados por los cambios a nivel lógico (ya sean cambios en el esquema conceptual o cambios en los esquemas externos). La independencia lógica es más difícil de lograr ya que los programas de aplicación son muy independientes de la estructura lógica de los datos a los que accede (se han creado a partir de ella).
 
             \item ¿Qué es un \textbf{diccionario de datos} y por qué es importante para el SMBD? \\
 
