--- a/latex/Tarea1.tex
+++ b/latex/Tarea1.tex
@@ -165,7 +165,13 @@
 
 
             \item ¿Qué es un \textbf{Almacén de datos}? Indica las diferencias entre éstos y una base de datos.
+            Un Almacén de Datos (Data Warehouse) es una recopilación de datos variada en el tiempo, orientada por temas, integrada, 
+            no volátil, en apoyo de las decisiones de la gerencia. Los almacenes de datos proporcionan acceso a datos para análisis complejos, descubrimiento de conocimiento y toma de decisiones. 
+            Admiten demandas de alto rendimiento en los datos e información de una organización. 
 
+            Diferencias entre un almacén de datos y una base de datos:
+            
+            \includegraphics[width=\textwidth]{imagenes/diferencias.png}
             \end{enumerate}
 
 
@@ -179,7 +185,8 @@
 
               \item URL: \url{http://www.ptolomeo.unam.mx:8080/xmlui/bitstream/handle/132.248.52.100/219/A6.pdf?sequence=6}
 
-              \item
+              \item Avilés Rosas, G. Conceptos básicos, Fundamentos de Bases de Datos, Nota de clase.
+              \item ¿Qué es un almacen de datos? Disponible en: \url{https://aws.amazon.com/es/data-warehouse/} [Acceso el 22 de agosto de 2019]
 
 
 
